--- a/README.org
+++ b/README.org
@@ -1,9 +1,7 @@
 
-#+Title: Delta Emacs configurations
+#+Title: Delta Emacs 
 #+Author: Midnight
 #+Property: header-args:elisp :tangle ./init.el
-
-* Delta Emacs
 
 Delta Emacs is a set of configurations (and a colorscheme) made as a personal project, trying to test how well can I do with this editor; I am aiming to integrate a good working environment within emacs.
 
